--- a/docs/notebooks/Scandal26_all.ipynb
+++ b/docs/notebooks/Scandal26_all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "c60afbfc-fd0f-4571-8017-f75451754029",
    "metadata": {
     "tags": []
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "3f5e12d2-e4fa-4d71-8f8e-f418884396c1",
    "metadata": {
     "tags": []
@@ -57,7 +57,7 @@
     }
    ],
    "source": [
-    "vol,hdr = nrrd.read('../E13-5_MRI_34um/atlasVolume.nrrd',index_order='F')\n",
+    "#vol,hdr = nrrd.read('../E13-5_MRI_34um/atlasVolume.nrrd',index_order='F')\n",
     "import SimpleITK as sitk\n",
     "itkimage = sitk.ReadImage(\"../atlasVolume/atlasVolume.mhd\")\n",
     "ct_scan = sitk.GetArrayFromImage(itkimage)\n",
